salesCard component created

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,3 +17,11 @@ a, a:visited {
     color: unset;
     text-decoration: none;
 }
+#sales {
+    padding: 40px 10px;
+}
+.container {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+}
